ts-2 Use TDD to create a very basic Stack in which we can push an element, pop an element, check the size of the stack and check if the stack is empty

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -27,7 +27,7 @@
       ],
       "console": "integratedTerminal",
       "sourceMaps": true,
-      "internalConsoleOptions": "openOnSessionStart"
+      "internalConsoleOptions": "neverOpen"
     }
   ]
 }
