--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "nyc": "^15.0.0",
     "ts-node": "^8.6.2",
     "typescript": "^3.8.2"
+  },
+  "dependencies": {
+    "@types/es6-promise": "^3.3.0"
   }
 }
